{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 224,
  "lineage": "de132966-24e3-8b43-3aa7-a9a62e4d7471",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "association_id": "eipassoc-05c9170ba7caa8ae8",
            "domain": "vpc",
            "id": "eipalloc-0cbec1550f61e8b2a",
            "network_interface": "eni-0017f02700a46894d",
            "private_dns": "ip-10-0-1-120.us-west-2.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-50-112-143-77.us-west-2.compute.amazonaws.com",
            "public_ip": "50.112.143.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b5a644766e0e6f",
            "arn": "arn:aws:ec2:us-west-2:202624756631:instance/i-096d40f98b5d9d0af",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-096d40f98b5d9d0af",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ibuchh-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bedcf7b38817c795",
            "private_dns": "ip-10-0-1-31.us-west-2.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-54-69-70-118.us-west-2.compute.amazonaws.com",
            "public_ip": "54.69.70.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-00a0554c4b079d0d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071ecf9136fc395cd",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5c49ae9b8a03c50"
            ]
          },
          "depends_on": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06ac6aceb41b30262",
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbec1550f61e8b2a",
            "id": "nat-02e0d226bc9621067",
            "network_interface_id": "eni-0017f02700a46894d",
            "private_ip": "10.0.1.120",
            "public_ip": "50.112.143.77",
            "subnet_id": "subnet-071ecf9136fc395cd",
            "tags": {
              "Name": "Development-NATGW"
            }
          },
          "depends_on": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b571f94e8b81c39d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-02e0d226bc9621067",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b571f94e8b81c39d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ac6aceb41b30262",
            "id": "r-rtb-0729f108e4e3281b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0729f108e4e3281b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b571f94e8b81c39d",
            "owner_id": "202624756631",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02e0d226bc9621067",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0729f108e4e3281b7",
            "owner_id": "202624756631",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ac6aceb41b30262",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0278cb124057c3a95",
            "route_table_id": "rtb-0b571f94e8b81c39d",
            "subnet_id": "subnet-0fe7d6586b96a5742"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cd16a78dfde92e",
            "route_table_id": "rtb-0b571f94e8b81c39d",
            "subnet_id": "subnet-0c21617986e43392a"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee15a0849aa75600",
            "route_table_id": "rtb-0b571f94e8b81c39d",
            "subnet_id": "subnet-00203a2a7567c1f1e"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0494d3353809f2482",
            "route_table_id": "rtb-0729f108e4e3281b7",
            "subnet_id": "subnet-071ecf9136fc395cd"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07486ac479143cdf2",
            "route_table_id": "rtb-0729f108e4e3281b7",
            "subnet_id": "subnet-035b455a4cc9647bf"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f09bc58ee96683f",
            "route_table_id": "rtb-0729f108e4e3281b7",
            "subnet_id": "subnet-0368434c49104b5ef"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:security-group/sg-0e5c49ae9b8a03c50",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5c49ae9b8a03c50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": null,
            "owner_id": "202624756631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-0fe7d6586b96a5742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0fe7d6586b96a5742",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-0c21617986e43392a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0c21617986e43392a",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-00203a2a7567c1f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-00203a2a7567c1f1e",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-071ecf9136fc395cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-071ecf9136fc395cd",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-035b455a4cc9647bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-035b455a4cc9647bf",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:subnet/subnet-0368434c49104b5ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0368434c49104b5ef",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0cab9955937d9bbc9"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202624756631:vpc/vpc-0cab9955937d9bbc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030f4d2976ba84819",
            "default_route_table_id": "rtb-09bf67e8832020c26",
            "default_security_group_id": "sg-0c7c031f1f32ab74f",
            "dhcp_options_id": "dopt-00a00078",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cab9955937d9bbc9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bf67e8832020c26",
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}